<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
    android:id="@+id/MainLayout">

    <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:text="@string/Itp_title"
      android:id="@+id/textView2" />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button
      android:id="@+id/btnItpInstall"
      android:layout_margin="1dp"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/Itp_install" />

      <Button
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/Itp_LocalInstall"
          android:id="@+id/btnItpLocalInstall"
          android:layout_weight="2"
          android:layout_margin="1dp" />
  </LinearLayout>

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:text="@string/Mod_title"
      android:id="@+id/textView" />

  <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_margin="1dip" android:id="@+id/btnModule" android:text="@string/Mod_import"
        android:layout_weight="1"></Button>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mod_browse"
        android:id="@+id/btnModBrowse"
        android:layout_margin="1dp"
        android:layout_weight="1" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Mod_uninstall"
        android:id="@+id/btnModUninstall"
        android:layout_margin="1dp"
        android:layout_weight="1" />

  </LinearLayout>

  <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:editable="false" android:id="@+id/tvHostVersion" android:text="@string/host_version"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkPyExtension"
            android:layout_weight="1"
            android:text="@string/Itp_PyExtPreffered"/>
    </LinearLayout>
</LinearLayout>